--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
