--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.4.0",
     "mongoose": "^5.11.10"
   },
   "devDependencies": {
