--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.1.4",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^6.4.0",
     "mongoose": "^5.11.10"
