--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
