--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@stripe/react-stripe-js": "^2.6.0",
+    "@stripe/stripe-js": "^3.0.8",
     "axios": "^1.6.7",
     "moment": "^2.30.1",
     "react": "^18.2.0",
